@@ -17,8 +17,8 @@ LIBTORRENT_VERSION_INFO=$LIBTORRENT_CURRENT:$LIBTORRENT_REVISION:$LIBTORRENT_AGE
 LIBTORRENT_VERSION_NO=$LIBTORRENT_CURRENT.$LIBTORRENT_AGE.$LIBTORRENT_REVISION
 
 AC_SUBST(LIBTORRENT_CURRENT)
-AC_SUBST(ATLAS_VERSION_INFO)
-AC_SUBST(ATLAS_VERSION_NO)
+AC_SUBST(LIBTORRENT_VERSION_INFO)
+AC_SUBST(LIBTORRENT_VERSION_NO)
 
 AM_INIT_AUTOMAKE("libtorrent", $LIBTORRENT_VERSION)
 AM_CONFIG_HEADER(config.h)
@@ -45,6 +45,26 @@ AC_ARG_ENABLE(debug,
     ]
 )
 
+
+dnl AX_KERNEL_VERSION(major, minor, level, comparison, action-if-true, action-if-false)
+AC_DEFUN(AX_KERNEL_VERSION, [
+SAVE_CFLAGS=$CFLAGS
+CFLAGS="-I$KINC -D__KERNEL__ -Werror"
+AC_TRY_COMPILE(
+  [
+  #include <linux/version.h>
+  #include <linux/config.h>
+  ],
+  [
+  #if LINUX_VERSION_CODE $4 KERNEL_VERSION($1, $2, $3)
+  break_me_hard(\\\);
+  #endif
+  ],
+[$5],[$6],)
+CFLAGS=$SAVE_CFLAGS
+])
+
+
 PKG_CHECK_MODULES(OPENSSL, openssl,
 		  CXXFLAGS="$CXXFLAGS `pkg-config --cflags openssl`";
                   LIBS="$LIBS -lcrypto `pkg-config --libs-only-L openssl`",
@@ -55,6 +75,12 @@ PKG_CHECK_MODULES(STUFF, sigc++-2.0,
 		  LIBS="$LIBS $STUFF_liBS")
 
 AC_CHECK_LIB(curl, curl_easy_init)
+
+AC_MSG_CHECKING([for linux 2.4.x])
+AX_KERNEL_VERSION(2, 4, 99, <,
+                  AC_MSG_RESULT([disable madvise see README]); AC_DEFINE(USE_MADVISE_WILLNEED, 0, Disable due to a kernel bug),
+                  AC_MSG_RESULT([enable madvise]); AC_DEFINE(USE_MADVISE_WILLNEED, 1, Disable this if you wish to run on 2.4.x))
+
 
 LIBTORRENT_LIBS="-ltorrent"
 AC_SUBST(LIBTORRENT_LIBS)
